make nav bar z-index 999 to prevent overlapping when cards expand

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .nav-bar{
   position: fixed;
+  z-index: 999;
   top: 0;
   width: 100%;
   overflow: hidden;
